# agentic-investment-management

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  AGENTS.md  AGENT_CORRECTED_DESCRIPTIONS.md  AGENT_REVIEW_SUMMARY.md  AGENT_VALIDATION_REPORT.md  ARCHITECTURE_IMPROVEMENT.md  BUG_TRACKER.md  C:\Users\hvksh\investing\.claude\settings.json  C:\Users\hvksh\investing\README.md  C:\Users\hvksh\investing\config\personal_settings.yaml  C:\Users\hvksh\investing\data\sample_portfolio.json  C:\Users\hvksh\investing\workflows\README.md  CHANGELOG.md  CHANGELOG_MCP_VALIDATION.md  CLAUDE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  ENHANCEMENT_ROADMAP.md  FINAL_PRODUCTION_READY_REPORT.md  FINAL_REMEDIATION_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_TEST_RESULTS.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INTEGRATION.md  KNOWN_ISSUES.md  LICENSE  MCP_ARCHITECTURE_GUIDE.md  MCP_VALIDATION_REPORT.md  NOTICE  NO_PLACEHOLDERS_VERIFICATION.md  OPENBB_MCP_CURATED_README.md  ORCHESTRATOR_LIGHTWEIGHT.md  PROJECT_STATUS.md  README.md  SILENT_FAILURES_FIXED.md  (+51 more)
oracle/: .gitignore  Dockerfile  README.md  debug.json  debug.py  deploy  lambda_function.py  pyproject.toml  requirements.txt
oracle/.github/workflows/: documentation.yml
oracle/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
oracle/_build/.doctrees/: environment.pickle  index.doctree
oracle/_build/.doctrees/modules/: constraints.doctree  helpers.doctree  initializers.doctree  objectives.doctree  optimization_types.doctree  oracle.doctree  oracle_strategy.doctree
oracle/_build/_modules/: functools.html  index.html
oracle/_build/_modules/service/: oracle.html  oracle_strategy.html
oracle/_build/_sources/: index.rst.txt
oracle/_build/_sources/modules/: constraints.rst.txt  helpers.rst.txt  oracle_strategy.rst.txt
oracle/_build/modules/: constraints.html  helpers.html  initializers.html  objectives.html  optimization_types.html  oracle.html  oracle_strategy.html
oracle/docs/: conf.py  index.rst  requirements.txt
oracle/docs/modules/: initializers.rst  objectives.rst  optimization_types.rst  oracle.rst
oracle/src/service/: __init__.py  optimization_helpers.py  oracle.py  oracle_strategy.py  oracle_strategy_refactored.py  types.py
oracle/src/service/constraints/: __init__.py  base_validator.py  constraints_manager.py
oracle/src/service/helpers/: __init__.py  constants.py  create_decision_vars.py  enums.py  logging_config.py  max_withdrawal.py  piecewise_linear.py  trade_applier.py  trade_extractor.py  trade_netting.py  trade_summary.py
oracle/src/service/initializers/: __init__.py  closed_lots.py  factor_model.py  prices.py  spreads.py  stock_restrictions.py  targets.py  tax_lots.py  tax_rates.py
oracle/src/service/objectives/: __init__.py  objective_manager.py
oracle/src/service/reports/: __init__.py  actuals_report.py  comparison_report.py  drift_report.py  gain_loss_report.py
oracle/src/solvers/: __init__.py  solver.py
(+326 files in other folders)
