[tool.poetry]
name = "oracle"
version = "0.1.0"
description = "Oracle Portfolio Optimizer from Double"
authors = ["JJ Maxwell jmaxwell@doule.finance"] 
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 