[tool.poetry]
name = "oracle"
version = "0.1.0"
description = "Oracle Portfolio Optimizer from Double"
authors = ["JJ Maxwell <jmaxwell@double.finance>"] 
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
pulp = "^2.7.0"
yfinance = "^0.2.40"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 